examples/valid/13_existential_structs.lane
module Examples.Valid13
pub struct Hide {
  type T : Type
  val : T
}

pub fn repack(h : Hide) -> Hide {
  {
    let Hide::{ T, val } = h
    Hide::{ T = T, val: val }
  }
}

pub let packed_int : Hide = Hide::{ T = Int, val: builtin("%answer") }
pub let repacked_int : Hide = repack(packed_int)
